新增 用户 弹窗

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,16 +9,17 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".modular.activity.RegisterActivity">
+        <activity android:name=".modular.activity.RegisterActivity"></activity>
+        <activity android:name=".modular.internet.activity.NewAccountActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".modular.internet.activity.NewAccountActivity"></activity>
         <activity android:name=".modular.activity.UserAgreementActivity" />
-        <!--<activity android:name=".modular.activity.RegisterActivity" />-->
+        <!-- <activity android:name=".modular.activity.RegisterActivity" /> -->
+        <activity android:name=".modular.internet.activity.NewAccountSuccessActivity"></activity>
     </application>
 
 </manifest>
