--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:supportsRtl="true"
         android:name=".MyApplication"
         android:theme="@style/AppTheme">
-        <activity android:name=".modular.activity.RegisterActivity">
+        <activity android:name=".modular.activity.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -18,10 +18,9 @@
             </intent-filter>
         </activity>
         <activity android:name=".modular.activity.UserAgreementActivity" />
-        <activity android:name=".modular.activity.LoginActivity" />
-        <!--<activity android:name=".modular.activity.RegisterActivity" />-->
-        <!-- <activity android:name=".modular.activity.RegisterActivity" /> -->
-        <activity android:name=".modular.internet.activity.NewAccountSuccessActivity"></activity>
+        <!--<activity android:name=".modular.activity.LoginActivity" />-->
+        <activity android:name=".modular.activity.RegisterActivity" />
+        <activity android:name=".modular.internet.activity.NewAccountSuccessActivity"/>
     </application>
 
 </manifest>
