新增 列表选择页面

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,9 +20,10 @@
         </activity>
         <activity android:name=".modular.activity.UserAgreementActivity" />
         <activity android:name=".modular.activity.LoginActivity" />
-        <!--<activity android:name=".modular.activity.RegisterActivity" />-->
+        <!-- <activity android:name=".modular.activity.RegisterActivity" /> -->
         <!-- <activity android:name=".modular.activity.RegisterActivity" /> -->
         <activity android:name=".modular.internet.activity.NewAccountSuccessActivity" />
+        <activity android:name=".modular.internet.activity.ListSelectActivity"></activity>
     </application>
 
 </manifest>
