--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="cn.ygyg.yjf">
 
     <application
@@ -9,22 +10,22 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:name=".MyApplication"
-        android:theme="@style/AppTheme">
-        <activity android:name=".modular.activity.RegisterActivity">
+        android:theme="@style/AppTheme"
+        tools:ignore="GoogleAppIndexingWarning">
+        <activity android:name=".modular.home.activity.MainTabActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".modular.activity.UserAgreementActivity" />
+        <activity android:name="cn.ygyg.yjf.modular.register.activity.UserAgreementActivity" />
         <!--<activity android:name=".modular.activity.LoginActivity" />-->
-        <activity android:name=".modular.activity.RegisterActivity" />
+        <activity android:name="cn.ygyg.yjf.modular.register.activity.RegisterActivity" />
         <activity android:name=".modular.internet.activity.NewAccountSuccessActivity"/>
-        <activity android:name=".modular.activity.LoginActivity" />
-        <!--<activity android:name=".modular.activity.RegisterActivity" />-->
-        <!-- <activity android:name=".modular.activity.RegisterActivity" /> -->
-        <activity android:name=".modular.internet.activity.NewAccountSuccessActivity" />
+        <activity android:name=".modular.password.activity.ResetPasswordActivity" />
+        <activity android:name=".modular.login.activity.BindingPhoneActivity" />
+        <!--<activity android:name=".modular.activity.LoginActivity" />-->
     </application>
 
 </manifest>
