--- a/rjhttp/build.gradle
+++ b/rjhttp/build.gradle
@@ -3,16 +3,13 @@ apply from: 'versioninfo.gradle'
 apply plugin: 'kotlin-android'
 
 android {
-    compileSdkVersion 28
+    compileSdkVersion compile_sdk_version
 
     defaultConfig {
-        minSdkVersion 15
-        targetSdkVersion 28
-        versionCode 1
-        versionName "1.0"
-
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
-
+        minSdkVersion min_sdk_version
+        targetSdkVersion target_sdk_version
+        versionCode version_code
+        versionName version_name
     }
 
     buildTypes {
@@ -31,12 +28,8 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-
-    api 'com.android.support:appcompat-v7:28.0.0'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    api "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+    implementation "com.android.support:appcompat-v7:$support_version"
+    api "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     /*MVP: RxJava+OKHttp+FastJson 需要使用的一些系列包*/
     api "com.squareup.retrofit2:retrofit:$retrofit_version"
     api "io.reactivex.rxjava2:rxjava:$rxjava_version"
@@ -46,6 +39,7 @@ dependencies {
     api "io.reactivex.rxjava2:rxandroid:$rxandroid_version"
     api "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     api "com.android.support:design:$support_version"
+    api 'com.github.jdsjlzx:LRecyclerView:1.5.4.3'
 }
 repositories {
     mavenCentral()
