--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,28 +4,30 @@
     package="cn.ygyg.yjf">
 
     <application
+        android:name=".MyApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:name=".MyApplication"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".modular.home.activity.MainTabActivity">
+        <activity android:name=".modular.home.activity.MainTabActivity"></activity>
+        <activity android:name=".modular.register.activity.UserAgreementActivity" />
+        <activity android:name=".modular.register.activity.RegisterActivity" />
+        <activity android:name=".modular.internet.activity.NewAccountActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".modular.register.activity.UserAgreementActivity" />
-        <activity android:name=".modular.register.activity.RegisterActivity" />
-        <activity android:name=".modular.internet.activity.NewAccountSuccessActivity"/>
+        <activity android:name=".modular.internet.activity.NewAccountSuccessActivity" />
         <activity android:name=".modular.password.activity.ResetPasswordActivity" />
         <activity android:name=".modular.login.activity.BindingPhoneActivity" />
         <activity android:name=".modular.login.activity.LoginActivity" />
-        <activity android:name=".modular.internet.activity.ListSelectActivity"/>
+        <activity android:name=".modular.internet.activity.ListSelectActivity" />
+        <activity android:name=".modular.internet.activity.AddressSelectorActivity"></activity>
     </application>
 
 </manifest>
