--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,6 +24,7 @@ dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation project(':rjhttp')
+    implementation 'com.lcodecorex:tkrefreshlayout:1.0.7'
     implementation 'com.tencent.mm.opensdk:wechat-sdk-android-without-mta:+'
 
 }
