--- a/rjhttp/build.gradle
+++ b/rjhttp/build.gradle
@@ -39,7 +39,7 @@ dependencies {
     api "io.reactivex.rxjava2:rxandroid:$rxandroid_version"
     api "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     api "com.android.support:design:$support_version"
-    api 'com.github.jdsjlzx:LRecyclerView:1.5.4.3'
+    implementation "com.github.bumptech.glide:glide:$glide_version"
 }
 repositories {
     mavenCentral()
