--- a/rjhttp/versioninfo.gradle
+++ b/rjhttp/versioninfo.gradle
@@ -19,5 +19,6 @@ ext {
     okhttp_version = '3.9.0'
     fastjson_version = '1.2.49'
     rxandroid_version = '2.0.2'
+    glide_version = '4.1.1'
 
 }
