--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,10 +12,10 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".modular.home.activity.MainTabActivity"></activity>
+        <!--<activity android:name=".modular.home.activity.MainTabActivity"></activity>-->
         <activity android:name=".modular.register.activity.UserAgreementActivity" />
         <activity android:name=".modular.register.activity.RegisterActivity" />
-        <activity android:name=".modular.internet.activity.NewAccountActivity">
+        <activity android:name=".modular.home.activity.MainTabActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
