--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,5 +26,6 @@ dependencies {
     implementation project(':rjhttp')
     implementation 'com.lcodecorex:tkrefreshlayout:1.0.7'
     implementation 'com.tencent.mm.opensdk:wechat-sdk-android-without-mta:+'
+    implementation "com.android.support:cardview-v7:$support_version"
 
 }
