--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,11 +12,11 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".modular.home.activity.MainTabActivity" />
-      <activity android:name=".modular.internet.activity.NewAccountActivity"/>
+
+        <activity android:name=".modular.internet.activity.NewAccountActivity" />
         <activity android:name=".modular.register.activity.UserAgreementActivity" />
         <activity android:name=".modular.register.activity.RegisterActivity" />
-        <activity android:name=".modular.internet.activity.NewAccountActivity">
+        <activity android:name=".modular.home.activity.MainTabActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -31,8 +31,7 @@
         <activity android:name=".modular.internet.activity.AddressSelectorActivity" />
         <activity android:name=".modular.payments.activity.PaymentsActivity" />
         <activity android:name=".modular.payments.activity.PaymentsHistoryActivity" />
-        <activity android:name=".modular.payments.activity.PaymentsCompleteActivity"></activity>
-        <activity android:name=".modular.internet.activity.AddressSelectorActivity"/>
+        <activity android:name=".modular.payments.activity.PaymentsCompleteActivity" />
     </application>
 
 </manifest>
