--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,5 +27,6 @@ dependencies {
     implementation 'com.lcodecorex:tkrefreshlayout:1.0.7'
     implementation 'com.tencent.mm.opensdk:wechat-sdk-android-without-mta:+'
     implementation "com.android.support:cardview-v7:$support_version"
+    implementation "com.ocnyang:contourview:1.0.1"
 
 }
