--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,6 +18,21 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    signingConfigs {
+        release {
+            keyAlias 'cloudpayment'
+            keyPassword 'alias-1qaz2wsx'
+            storeFile file('./releasekey.jks')
+            storePassword 'android*1qaz2wsx'
+        }
+
+        debug {
+            keyAlias 'cloudpayment'
+            keyPassword 'alias-1qaz2wsx'
+            storeFile file('./releasekey.jks')
+            storePassword 'android*1qaz2wsx'
+        }
+    }
 }
 
 dependencies {
@@ -28,5 +43,9 @@ dependencies {
     implementation 'com.tencent.mm.opensdk:wechat-sdk-android-without-mta:+'
     implementation "com.android.support:cardview-v7:$support_version"
     implementation "com.ocnyang:contourview:1.0.1"
+    // 高德定位
+    implementation 'com.amap.api:location:4.5.1'
+    /*权限检测工具*/
+    implementation 'com.mylhyl:acp:1.1.7'
 
 }
