--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,5 +47,8 @@ dependencies {
     implementation 'com.amap.api:location:4.5.1'
     /*权限检测工具*/
     implementation 'com.mylhyl:acp:1.1.7'
+    //拼音 中国城市词库
+    implementation 'com.github.promeg:tinypinyin:2.0.3'
+    implementation 'com.github.promeg:tinypinyin-lexicons-android-cncity:2.0.3'
 
 }
