--- a/rjhttp/build.gradle
+++ b/rjhttp/build.gradle
@@ -29,7 +29,6 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "com.android.support:appcompat-v7:$support_version"
-    api "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     /*MVP: RxJava+OKHttp+FastJson 需要使用的一些系列包*/
     api "com.squareup.retrofit2:retrofit:$retrofit_version"
     api "io.reactivex.rxjava2:rxjava:$rxjava_version"
@@ -40,6 +39,7 @@ dependencies {
     api "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     api "com.android.support:design:$support_version"
     implementation "com.github.bumptech.glide:glide:$glide_version"
+    api "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
 }
 repositories {
     mavenCentral()
