修改Rxjava中next不能传入null的BUG

--- a/rjhttp/src/main/assets/result-config.json
+++ b/rjhttp/src/main/assets/result-config.json
@@ -1,13 +1,13 @@
 {
-  "codeKey": "status",
-  "msgKey": "msg",
+  "codeKey": "retCode",
+  "msgKey": "retMsg",
   "dataKey": [
     "rspBody",
     "resultData",
-    "results"
+    "result"
   ],
   "successCode": [
-    "0000000",
+    "000000",
     "1001"
   ],
   "error": {
