--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,12 @@ android {
             storePassword 'android*1qaz2wsx'
         }
     }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+
 }
 
 dependencies {
@@ -41,7 +47,6 @@ dependencies {
     implementation project(':rjhttp')
     implementation 'com.lcodecorex:tkrefreshlayout:1.0.7'
     implementation 'com.tencent.mm.opensdk:wechat-sdk-android-without-mta:+'
-    implementation "com.android.support:cardview-v7:$support_version"
     implementation "com.ocnyang:contourview:1.0.1"
     // 高德定位
     implementation 'com.amap.api:location:4.5.1'
