--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,11 +40,10 @@
             android:value="7a8810e4f048e7fca97d7beb1ee6cef4" />
 
         <activity
-            android:name=".modular.home.activity.MainTabActivity"
+            android:name=".modular.login.activity.LoginActivity"
             android:launchMode="singleTask">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -52,7 +51,7 @@
         <activity android:name=".modular.register.activity.RegisterActivity" />
         <activity android:name=".modular.password.activity.ResetPasswordActivity" />
         <activity android:name=".modular.login.activity.BindingPhoneActivity" />
-        <activity android:name=".modular.login.activity.LoginActivity" />
+        <activity android:name=".modular.home.activity.MainTabActivity" />
         <activity android:name=".modular.internet.activity.NewAccountActivity" />
         <activity android:name=".modular.internet.activity.ListSelectActivity" />
         <activity
