--- a/rjhttp/build.gradle
+++ b/rjhttp/build.gradle
@@ -24,6 +24,10 @@ android {
         }
     }
 
+    compileOptions {
+        targetCompatibility 1.8
+        sourceCompatibility 1.8
+    }
 }
 
 dependencies {
@@ -40,6 +44,7 @@ dependencies {
     api "com.android.support:design:$support_version"
     implementation "com.github.bumptech.glide:glide:$glide_version"
     api "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
+    implementation "com.android.support:cardview-v7:$support_version"
 }
 repositories {
     mavenCentral()
