--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -63,7 +63,9 @@
             android:name=".modular.internet.activity.NewAccountSuccessActivity"
             android:noHistory="true" />
         <activity android:name=".modular.internet.activity.AddressSelectorActivity" />
-        <activity android:name=".modular.payments.activity.PaymentsActivity" />
+        <activity
+            android:name=".modular.payments.activity.PaymentsActivity"
+            android:windowSoftInputMode="adjustPan|stateUnchanged" />
         <activity android:name=".modular.payments.activity.PaymentsHistoryActivity" />
         <activity android:name=".modular.payments.activity.PaymentsCompleteActivity" />
         <activity
