修改阴影效果

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,7 +47,7 @@ dependencies {
     implementation project(':rjhttp')
     implementation 'com.lcodecorex:tkrefreshlayout:1.0.7'
     implementation 'com.tencent.mm.opensdk:wechat-sdk-android-without-mta:+'
-    implementation "com.ocnyang:contourview:1.0.1"
+    implementation 'com.ocnyang:contourview:1.0.1'
     // 高德定位
     implementation 'com.amap.api:location:4.5.1'
     /*权限检测工具*/
