首页 物联网表

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -53,8 +53,7 @@
         <activity android:name=".modular.login.activity.BindingPhoneActivity" />
         <activity
             android:name=".modular.home.activity.MainTabActivity"
-            android:launchMode="singleTask">
-        <activity android:name=".modular.home.activity.MainTabActivity" />
+            android:launchMode="singleTask" />
         <activity android:name=".modular.home.activity.WelcomeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
