修改配置文件

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,16 +1,16 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
-apply from: 'versioninfo.gradle'
 
 android {
-    compileSdkVersion compile_sdk_version
+    compileSdkVersion rootProject.ext.compile_sdk_version
+
     defaultConfig {
-        applicationId "cn.ygyg.cloudpayment"
-        minSdkVersion min_sdk_version
-        targetSdkVersion target_sdk_version
-        versionCode version_code
-        versionName version_name
+        applicationId rootProject.ext.application_id
+        minSdkVersion rootProject.ext.min_sdk_version
+        targetSdkVersion rootProject.ext.target_sdk_version
+        versionCode rootProject.ext.version_code
+        versionName rootProject.ext.version_name
     }
 
     signingConfigs {
@@ -69,8 +69,31 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility javaVersion
+        targetCompatibility javaVersion
+    }
+
+    ext.getGitHeadRefsSuffix = {
+        try {
+
+            // .git/HEAD描述当前目录所指向的分支信息，内容示例："ref: refs/heads/master\n"
+            def headFile = new File('.git/HEAD')
+            if (headFile.exists()) {
+                String[] strings = headFile.getText('UTF-8').split(" ");
+                if (strings.size() > 1) {
+                    String refFilePath = '.git/' + strings[1];
+                    // 根据HEAD读取当前指向的hash值，路径示例为：".git/refs/heads/master"
+                    def refFile = new File(refFilePath.replace("\n", ""));
+                    // 索引文件内容为hash值+"\n"，
+                    // 示例："90312cd9157587d11779ed7be776e3220050b308\n"
+                    return "(" + refFile.getText('UTF-8').substring(0, 7) + ")"
+                }
+            }
+
+        } catch (Exception e) {
+            e.printStackTrace()
+        }
+        return ""
     }
 
 }
