--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,43 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.2.50'
+    project.ext {
+        // Sdk and tools
+        application_id = "cn.ygyg.cloudpayment"
+        compile_sdk_version = 26
+        min_sdk_version = 21
+        target_sdk_version = 26
+        build_tools_version = '27.0.3'
+        version_code = 1
+        version_name = '1.0.2'
+        support_version = '27.1.1'
+        kotlin_version = '1.2.50'
+        javaVersion = JavaVersion.VERSION_1_8
+
+        retrofit_version = '2.3.0'
+        rxjava_version = '2.1.9'
+        adapter_rxjava_version = '2.3.0'
+        okhttp_version = '3.9.0'
+        fastjson_version = '1.2.49'
+        rxandroid_version = '2.0.2'
+        glide_version = '4.1.1'
+        kotlin_version = '1.2.50'
+
+        libs = [
+                libSupport      : "com.android.support:appcompat-v7:$support_version",
+                libDesign       : "com.android.support:design:$support_version",
+                libRetrofit     : "com.squareup.retrofit2:retrofit:$retrofit_version",
+                libRxjava       : "io.reactivex.rxjava2:rxjava:$rxjava_version",
+                libRxjavaAdapter: "com.squareup.retrofit2:adapter-rxjava2:$adapter_rxjava_version",
+                libInterceptor  : "com.squareup.okhttp3:logging-interceptor:$okhttp_version",
+                libJson         : "com.alibaba:fastjson:$fastjson_version",
+                libRxandroid    : "io.reactivex.rxjava2:rxandroid:$rxandroid_version",
+                libKotlinJdk    : "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version",
+                libKotlinReflect: "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version",
+                libGlide        : "com.github.bumptech.glide:glide:$glide_version"
+        ]
+    }
+
     repositories {
         google()
         jcenter()
@@ -13,6 +49,7 @@ buildscript {
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
+
 }
 
 allprojects {
