--- a/app/build.gradle
+++ b/app/build.gradle
@@ -99,7 +99,7 @@ android {
 }
 
 dependencies {
-    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation fileTree(include: ['*.jar','*.aar'], dir: 'libs')
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation project(':rjhttp')
     implementation 'com.lcodecorex:tkrefreshlayout:1.0.7'
