修改输出文件路径

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -92,7 +92,7 @@ android {
         } catch (Exception e) {
             e.printStackTrace()
         }
-        return "00000000"
+        return ""
     }
 
 }
